--- a/CoreMvcProjectDemo/Views/Blog/Index.cshtml
+++ b/CoreMvcProjectDemo/Views/Blog/Index.cshtml
@@ -14,37 +14,37 @@
                     @foreach (var item in Model)
                     {
 
-                    
-                    <div class="col-lg-4 card">
-                        <a href="single.html">
-                            <img src="@item.BlogImage" class="card-img-top img-fluid" alt="">
-                        </a>
-                        <div class="card-body">
-                            <ul class="blog-icons my-4">
-                                <li>
-                                    <a href="#">
-                                        <i class="far fa-calendar-alt"></i> @item.BlogCreateDate
-                                    </a>
-                                </li>
-                                <li class="mx-2">
-                                    <a href="#">
-                                        <i class="far fa-comment"></i> 0
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fas fa-eye"></i> @item.CategoryId
-                                    </a>
-                                </li>
 
-                            </ul>
-                            <h5 class="card-title">
-                                <a href="single.html">@item.BlogTitle</a>
-                            </h5>
-                            <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt.. </p>
-                            <a href="single.html" class="btn btn-primary read-m">Devamını Oku</a>
+                        <div class="col-lg-4 card">
+                            <a href="single.html">
+                                <img src="@item.BlogImage" class="card-img-top img-fluid" alt="">
+                            </a>
+                            <div class="card-body">
+                                <ul class="blog-icons my-4">
+                                    <li>
+                                        <a href="#">
+                                            <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))
+                                        </a>
+                                    </li>
+                                    <li class="mx-2">
+                                        <a href="#">
+                                            <i class="far fa-comment"></i> 0
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fas fa-eye"></i> @item.Category.CategoryName <!--Eager Load - Lazer Load-->
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <h5 class="card-title">
+                                    <a href="/Blog/BlogReadAll/@item.BlogId">@item.BlogTitle</a> <!--Ders28-Dakika 4:50-->
+                                </h5>
+                                <p class="card-text mb-3">@item.BlogContent.Substring(0,100). </p>
+                                <a href="/Blog/BlogReadAll/@item.BlogId" class="btn btn-primary read-m">Devamını Oku</a>
+                            </div>
                         </div>
-                    </div>
                     }
                 </div>
 
