--- a/CoreMvcProjectDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreMvcProjectDemo/Views/Blog/BlogReadAll.cshtml
@@ -32,17 +32,17 @@
                                 <ul>
                                     <li>
                                         <a href="#">
-                                            <i class="far fa-calendar-alt"></i> FEB 15,2018
+                                            <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))
                                         </a>
                                     </li>
                                     <li class="mx-2">
                                         <a href="#">
-                                            <i class="far fa-thumbs-up"></i> 201 Likes
+                                            <i class="far fa-thumbs-up"></i> 0 Beğeni
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <i class="far fa-comment"></i> 15 Comments
+                                            <i class="far fa-comment"></i> 0 Yorum
                                         </a>
                                     </li>
 
@@ -54,54 +54,15 @@
                             <a href="single.html">@item.BlogTitle</a>
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua uta enim ad minim ven iam quis nostrud exercitation ullamco labor nisi ut aliquip exea commodo consequat duis
-                            aute irudre dolor in elit sed uta labore dolore reprehender
+                            @item.BlogContent
                         </p>
-                        <a href="single.html" class="btn btn-primary read-m">Read More</a>
+                        <a href="/Blog/Index" class="btn btn-primary read-m">Blog Listesi</a>
                     </div>
                     }
 
-                    <div class="comment-top">
-                        <h4>Comments</h4>
-                        <div class="media">
-                            <img src="images/t1.jpg" alt="" class="img-fluid" />
-                            <div class="media-body">
-                                <h5 class="mt-0">Joseph Goh</h5>
-                                <p>
-                                    Lorem Ipsum convallis diam consequat magna vulputate malesuada. id dignissim sapien velit id felis ac cursus eros.
-                                    Cras a ornare elit.
-                                </p>
+                    @await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")
 
-                                <div class="media mt-3">
-                                    <a class="d-flex pr-3" href="#">
-                                        <img src="images/t2.jpg" alt="" class="img-fluid" />
-                                    </a>
-                                    <div class="media-body">
-                                        <h5 class="mt-0">Richard Spark</h5>
-                                        <p>
-                                            Lorem Ipsum convallis diam consequat magna vulputate malesuada. id dignissim sapien velit id felis ac cursus eros.
-                                            Cras a ornare elit.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-top">
-                        <h4>Leave a Comment</h4>
-                        <div class="comment-bottom">
-                            <form action="#" method="post">
-                                <input class="form-control" type="text" name="Name" placeholder="Name" required="">
-                                <input class="form-control" type="email" name="Email" placeholder="Email" required="">
-
-                                <input class="form-control" type="text" name="Subject" placeholder="Subject" required="">
-
-                                <textarea class="form-control" name="Message" placeholder="Message..." required=""></textarea>
-                                <button type="submit" class="btn btn-primary submit">Submit</button>
-                            </form>
-                        </div>
-                    </div>
+                    @await Html.PartialAsync("~/Views/Comment/PartialAddComment.cshtml")
                 </div>
 
                 <!--//left-->
