--- a/CoreMvcProjectDemo/Views/Register/Index.cshtml
+++ b/CoreMvcProjectDemo/Views/Register/Index.cshtml
@@ -3,17 +3,20 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/UserLayout.cshtml";
 }
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+
 <section class="main-content-w3layouts-agileits">
     <div class="container">
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form action="#" method="post">
+                <form method="post">
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız ve Soyadınız</label>
 
-                            <input type="text" class="form-control" id="validationDefault01" name="WriterName" 
+                            <input type="text" class="form-control" id="validationDefault01" name="WriterName"
                                    placeholder="" required="">
                         </div>
                         <div class="col-md-6 mb-3">
@@ -30,20 +33,26 @@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Görsel Dosya Yolu</label>
-                            <input type="password" class="form-control" name="WriterImage"
+                            <input type="text" class="form-control" name="WriterImage"
                                    id="password2" placeholder="" required="">
                         </div>
 
                     </div>
-                    <button type="submit" class="btn btn-primary submit mb-4">Register</button>
-                    
+                    <button type="submit" class="btn btn-primary submit mb-4">Kayıt Ol</button>
+
                     <p>
-                        <input type="checkbox" /> <a>Tüm şartları onayladım ve kabul ediyorum.</a>
+                        <a href="#" id="btn1">Tüm şartları onayladım ve kabul ediyorum.</a>
                     </p>
                 </form>
 
             </div>
         </div>
     </div>
+    <br />
+    <script>
+        $('#btn1').click(function () {
+            swal("Site Deneme"); //js
+        });
+    </script>
 </section>
 
