--- a/CoreMvcProjectDemo/Views/Register/Index.cshtml
+++ b/CoreMvcProjectDemo/Views/Register/Index.cshtml
@@ -1,8 +1,11 @@
-﻿
+﻿@model EntityLayer.Concrete.Writer
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/UserLayout.cshtml";
 }
+
+<!--Ders 36 Dakika 6:00 Loginin Hazırlanması-->
+
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 
@@ -11,30 +14,42 @@
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form method="post">
+                @using (Html.BeginForm("Index", "Register", FormMethod.Post))
+                {
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız ve Soyadınız</label>
 
-                            <input type="text" class="form-control" id="validationDefault01" name="WriterName"
-                                   placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterName, "", new { @class = "text-danger" })
+
+                            @*<input type="text" class="form-control" id="validationdefault01" name="writername"
+                                placeholder="" required="">*@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom02">Mail Adresi</label>
-                            <input type="email" class="form-control" name="WriterMail"
-                                   id="validationDefault02" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterMail, "", new { @class = "text-danger" })
+
+                            @*<input type="email" class="form-control" name="WriterMail"
+                                id="validationDefault02" placeholder="" required="">*@
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword1 mb-2">Şifre</label>
-                            <input type="password" class="form-control" name="WriterPassword"
-                                   id="password1" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
+
+                            @*<input type="password" class="form-control" name="WriterPassword"
+                                id="password1" placeholder="" required="">*@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Görsel Dosya Yolu</label>
-                            <input type="text" class="form-control" name="WriterImage"
-                                   id="password2" placeholder="" required="">
+                            @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+
+                            @*<input type="text" class="form-control" name="WriterImage"
+                                id="password2" placeholder="" required="">*@
                         </div>
 
                     </div>
@@ -43,7 +58,7 @@
                     <p>
                         <a href="#" id="btn1">Tüm şartları onayladım ve kabul ediyorum.</a>
                     </p>
-                </form>
+                }<!--Html Form Attirubte Using HTML BEGİN FORM-->
 
             </div>
         </div>
@@ -51,7 +66,7 @@
     <br />
     <script>
         $('#btn1').click(function () {
-            swal("Site Deneme"); //js
+            swal("Site Kabul Şartları", "Site Deneme", {button:"Ok"}); //js
         });
     </script>
 </section>
