Writer Panel, Refactoring, Generic Service, TEntity, BlogValidator.

--- a/CoreMvcProjectDemo/Views/Blog/Index.cshtml
+++ b/CoreMvcProjectDemo/Views/Blog/Index.cshtml
@@ -41,7 +41,7 @@
                                 <h5 class="card-title">
                                     <a href="/Blog/BlogReadAll/@item.BlogId">@item.BlogTitle</a> <!--Ders28-Dakika 4:50-->
                                 </h5>
-                                <p class="card-text mb-3">@item.BlogContent.Substring(0,100) </p>
+                                <p class="card-text mb-3">@item.BlogContent.Substring(0,1) </p> <!--100 OLACAK BU-->
                                 <a href="/Blog/BlogReadAll/@item.BlogId" class="btn btn-primary read-m">Devamını Oku</a>
                             </div>
                         </div>
