--- a/CoreMvcProjectDemo/Views/Blog/BlogListByWriter.cshtml
+++ b/CoreMvcProjectDemo/Views/Blog/BlogListByWriter.cshtml
@@ -18,16 +18,16 @@
     </tr>
     @foreach (var item in Model)
     {
-        <tr>
-            <th>@item.BlogId</th>
-            <td>@item.BlogTitle</td>
-            <td>@item.BlogCreateDate</td>
-            <td>@item.CategoryId</td>
-            <td>@item.BlogStatus</td>
-            <td><a href="#" class="btn btn-danger">Sil</a></td>
-            <td><a href="#" class="btn btn-warning">Düzenle</a></td>
-        </tr>
+<tr>
+    <th>@item.BlogId</th>
+    <td>@item.BlogTitle</td>
+    <td>@(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))</td>
+    <td>@item.Category.CategoryName</td>
+    <td>@item.BlogStatus</td>
+    <td><a href="/Blog/DeleteBlog/@item.BlogId" class="btn btn-danger">Sil</a></td>
+    <td><a href="/Blog/EditBlog/@item.BlogId" class="btn btn-warning">Düzenle</a></td>
+</tr>
     }
 </table>
-<a href="#" class="btn btn-primary">Yeni Blog Oluştur</a>
+<a href="/Blog/BlogAdd/" class="btn btn-primary">Yeni Blog Oluştur</a>
 
