--- a/CoreMvcProjectDemo/Areas/Admin/Views/Writer/Index.cshtml
+++ b/CoreMvcProjectDemo/Areas/Admin/Views/Writer/Index.cshtml
@@ -9,6 +9,7 @@
 
 <button type="button" id="btngetlist" class="btn btn-outline-primary">Yazar Listesi</button>
 <button type="button" id="btngetbyid" class="btn btn-outline-success">Yazar Getir</button>
+<button type="button" id="btnaddwriter" class="btn btn-outline-info">Yazar Ekle</button>
 <br />
 <br />
 
@@ -22,6 +23,13 @@
 <br />
 <div>
     <input type="text" id="writerid" placeholder="yazar id giriniz" class="form-control" />
+</div>
+<br />
+<div>
+    <input type="text" class="form-control" id="txtwriterid" placeholder="Yazar Id" />
+
+    <input type="text" class="form-control" id="txtwritername" placeholder="Yazar Adı" />
+    <br />
 </div>
 
 
@@ -68,6 +76,23 @@
 
         });
 
+        $("btnaddwriter").click(function () {
+            let writer = {
+                Id: $("txtwriterid").val(),
+                Name: $("txtwritername").val()
+            };
+
+            $.ajax({
+                type: "post",
+                url: "/Admin/Writer/AddWriter/",
+                data: writer,
+                success: function (func) {
+                    let result = jQuery.parseJSON(func);
+                    console.log(result);
+                    alert("Yazar ekleme işlemi başarılı bir şekilde gerçekleşti");
+                }
+            });
+        });
     </script>
 }
 
