--- a/CoreMvcProjectDemo/Views/RegisterUser/Index.cshtml
+++ b/CoreMvcProjectDemo/Views/RegisterUser/Index.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Register</title>
+    <title>INSPINIA | Register SK</title>
 
     <link href="~/inspinia-gh-pages/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/inspinia-gh-pages/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -27,30 +27,35 @@
         <div>
             <div>
 
-                <h3 class="logo-name">Core+</h3>
+                <h3 class="logo-name">Core</h3>
 
             </div>
-            <h3>Kayıt Ekranı</h3>
+            <h3>Kayıt Ekranı +</h3>
             <p>Yeni bir hesap oluşturun.</p>
             <form class="m-t" role="form" asp-action="Index">
 
                 <div class="form-group">
-                    <input type="text" class="form-control" asp-for="@Model.NameSurname" placeholder="Adınız" required="">
+                    <span asp-validation-for="@Model.NameSurname" class="text-danger"></span>
+                    <input type="text" class="form-control" asp-for="@Model.NameSurname" placeholder="Adınız">
                 </div>
 
                 <div class="form-group">
-                    <input type="email" class="form-control" asp-for="@Model.Mail" placeholder="Mail Adresiniz" required="">
+                    <span asp-validation-for="@Model.Mail" class="text-danger"></span>
+                    <input type="email" class="form-control" asp-for="@Model.Mail" placeholder="Mail Adresiniz">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" asp-for="@Model.UserName" placeholder="Kullanıcı Adınız" required="">
+                    <span asp-validation-for="@Model.UserName" class="text-danger"></span>
+                    <input type="text" class="form-control" asp-for="@Model.UserName" placeholder="Kullanıcı Adınız">
                 </div>
 
                 <div class="form-group">
+                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
                     <input type="password" class="form-control" asp-for="@Model.Password" placeholder="Şifre" required="">
                 </div>
 
                 <div class="form-group">
+                    <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
                     <input type="password" class="form-control" asp-for="@Model.ConfirmPassword" placeholder="Şifre Tekrar" required="">
                 </div>
 
@@ -61,7 +66,11 @@
                 <button type="submit" class="btn btn-primary block full-width m-b">Kayıt Ol</button>
 
                 <p class="text-muted text-center"><small>Bir hesabınız var mı?</small></p>
-                <a class="btn btn-sm btn-white btn-block" href="/RegisterUser/Login">Giriş Yap</a>
+                <a class="btn btn-sm btn-white btn-block" href="/Login/Index">Giriş Yap</a>
+
+                <div class="text-danger" asp-validation-summary="ModelOnly">
+
+                </div>
             </form>
             <p class="m-t"> <small>Asp.NET Core 5.0 Project &copy; Tüm Hakları Saklıdır.|2022</small> </p>
         </div>
@@ -73,7 +82,8 @@
     <script src="~/inspinia-gh-pages/js/bootstrap.js"></script>
     <!-- iCheck -->
     <script src="~/inspinia-gh-pages/js/plugins/iCheck/icheck.min.js"></script>
-    <script>$(document).ready(function(){
+    <script>
+    $(document).ready(function () {
             $('.i-checks').iCheck({
                 checkboxClass: 'icheckbox_square-green',
                 radioClass: 'iradio_square-green',
