--- a/CoreMvcProjectDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreMvcProjectDemo/Views/Writer/WriterEditProfile.cshtml
@@ -6,54 +6,39 @@
 
 <h1>WriterEditProfile</h1>
 
-    <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Yazar Profil Bilgileri Düzenleme</h4>
-                <br />
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Yazar Profil Bilgileri Düzenleme</h4>
+            <br />
 
-                <form class="forms-sample" method="post">
-                    <div class="form-group">
-                        <label for="exampleInputName1">Yazar Ad Soyadı</label>
-                        <input type="text" asp-for="@Model.namesurname" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">Kullanıcı Adı</label>
-                        <input type="text" asp-for="@Model.username" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">Mail Adresi</label>
-                        <input type="text" asp-for="@Model.mail" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">Resim URL</label>
-                        <input type="text" asp-for="@Model.imageurl" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword4">Şifre</label>
-                        @*@Html.PasswordFor(x => x.PasswordHash, new { @class = "form-control" })*@
-                    </div>
+            <form class="forms-sample" method="post">
+                <div class="form-group">
+                    <label for="exampleInputName1">Yazar Ad Soyadı</label>
+                    <input type="text" asp-for="@Model.namesurname" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Kullanıcı Adı</label>
+                    <input type="text" asp-for="@Model.username" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Mail Adresi</label>
+                    <input type="text" asp-for="@Model.mail" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail5">Yeni Şifreniz</label>
+                    <input type="password" asp-for="@Model.password" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Resim URL</label>
+                    <input type="text" asp-for="@Model.imageurl" class="form-control" />
+                </div>
 
-                    @*<div class="form-group">
-            <label>Yazar Görseli</label>
-            <input type="file" name="img[]" class="file-upload-default">
-            <div class="input-group col-xs-12">
-                <input type="text" class="form-control file-upload-info" disabled placeholder="Resim Yükle">
-                <span class="input-group-append">
-                    <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
-                </span>
-            </div>
-        </div>*@
-
-                    @*<div class="form-group">
-            <label for="exampleTextarea1">Yazar Hakkında</label>
-            @Html.TextAreaFor(x => x.About, 10, 3, new { @class = "form-control" })
-        </div>*@
-                    <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
-                    <button class="btn btn-light">İptal</button>
-                </form>
-            </div>
+                <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
+                <button class="btn btn-light">İptal</button>
+            </form>
         </div>
     </div>
+</div>
 
 
