--- a/CoreMvcProjectDemo/Views/Writer/WriterNavbarPartial.cshtml
+++ b/CoreMvcProjectDemo/Views/Writer/WriterNavbarPartial.cshtml
@@ -64,7 +64,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Login/WriterLogout/">
+            <a class="nav-link" href="/Login/Logout/">
                 <span class="menu-title">Çıkış Yap</span>
                 <i class="mdi mdi-logout menu-icon"></i>
             </a>
